--- a/GlaDOS_Me/app/src/main/res/layout/activity_gla_dos_me.xml
+++ b/GlaDOS_Me/app/src/main/res/layout/activity_gla_dos_me.xml
@@ -8,33 +8,17 @@
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="GlaDOS Status: The cake is a lie!"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <ImageView
-        android:id="@+id/micImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/text1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@android:drawable/presence_audio_online" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/micImage"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="GlaDOS It!"
-            android:id="@+id/process"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/text1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,7 +27,6 @@
             android:text="Record Audio"
             android:id="@+id/textView"
             android:layout_marginTop="39dp"
-            android:layout_below="@+id/process"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="25dp"
@@ -75,30 +58,28 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Load Audio File"
             android:id="@+id/textView2"
-            android:layout_centerVertical="true"
-            android:layout_alignLeft="@+id/textView"
-            android:layout_alignStart="@+id/textView" />
+            android:layout_above="@+id/browse"
+            android:layout_alignRight="@+id/stopPlay"
+            android:layout_alignEnd="@+id/stopPlay" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Browse..."
             android:id="@+id/browse"
-            android:layout_below="@+id/textView2"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_alignStart="@+id/textView2" />
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/start"
+            android:layout_alignStart="@+id/start" />
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/play"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/browse"
-            android:layout_alignStart="@+id/browse"
-            android:layout_marginBottom="32dp"
             android:clickable="true"
             android:src="@android:drawable/ic_media_play"
-            android:onClick="play" />
+            android:onClick="play"
+            android:layout_below="@+id/textView3"
+            android:layout_alignLeft="@+id/textView2" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -117,9 +98,27 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Playback"
             android:id="@+id/textView3"
-            android:layout_above="@+id/play"
-            android:layout_toLeftOf="@+id/stopPlay"
-            android:layout_toStartOf="@+id/stopPlay" />
+            android:layout_below="@+id/browse"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_alignStart="@+id/textView2"
+            android:layout_marginTop="56dp" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageButton"
+            android:layout_alignTop="@+id/stopPlay"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/next"
+            android:src="@android:drawable/ic_menu_send"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
 </RelativeLayout>
